--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -8,11 +8,50 @@
 	First we have to set up our SSH keys. Follow <a href = "https://help.github.com/articles/generating-ssh-keys/" target = "_blank">this guide</a> to do so. <strong>Follow each step in the guide from "Checking for existing SSH keys" to "Testing your SSH connection".</strong>
 </p>
 
-<p>After you've done everything in that link, in your console type in</p>
+<p>After you've completed everything in that link, <strong>open up a second terminal window from Tokaido</strong>. You should now have 2 terminal windows open. One terminal window should be running the rails server.</p>
+
+<div class="well">
+  <h3>Having Two Terminal Windows Open</h3>
+  <p>
+    We want to have two terminal windows open. This is because we want <strong>one for running the server and one for typing in rails commands</strong>.
+  </p> 
+
+  <p>
+    One terminal will look like this, where you can type in commmands:
+  </p>
+
+  <%= image_tag 'ideator/terminal.png', class: 'img-responsive screenshot' %>
+
+  <p>
+    We also need another terminal window for running the server:
+  </p>  
+
+  <%= image_tag 'ideator/server.png', class: 'img-responsive screenshot' %>
+
+  <p>
+    You'll notice that the terminal window that is running the server will not respond to anything that you type in. <strong>You can only execute commands in terminal windows that doesn't have a server running on it (the terminal window in the first screenshot).</strong>
+  </p>
+</div>
+
+<p>
+  In the terminal window for running commands, let's run the following command:
+</p>
 
 <pre><code class="bash">
 git init .
 </code></pre>
+
+<p>
+  It should give you a message like this in the terminal:
+</p>
+
+<pre><code class="bash">
+Initialized empty Git repository in /Users/YourUsername/desktop/ideator
+</code></pre>
+
+<p>
+  Next, let's run the following commands:
+</p>
 
 <pre><code class="bash">
 git add .
@@ -35,7 +74,7 @@ git commit -am “Initial commit”
 </p>
 
 <p>
-	On the next page, go to where it says <strong>“…or push an existing repository from the command line”</strong>.
+	On the next page, go to the sections thatsays <strong>“…or push an existing repository from the command line”</strong>.
 </p>
 
 <p>
@@ -43,7 +82,7 @@ git commit -am “Initial commit”
 </p>
 
 <pre><code class="bash">
-git remote add origin git@github.com:yourUsernameHere/test.git
+git remote add origin git@github.com:YourGithubUsername/test.git
 </code></pre>
 
 <pre><code class="bash">
@@ -51,11 +90,32 @@ git push -u origin master
 </code></pre>
 
 <p class="alert alert-danger">
-  Make sure you replace <code>git@github.com:yourUsernameHere/test.git</code> with your username.
+  Make sure you replace <code>git@github.com:YourGithubUsername/test.git</code> with your username.
 </p>
 
 <p>
-	Once you’ve pasted and entered that into your terminal, you’re all set! GitHub is ready to go!
+  Once you are done with this process, let's make sure that everything is set up correctly. In your terminal, run the following command:
+</p>
+
+<pre><code class="bash">
+git remote -v
+</code></pre>
+
+<p>
+  In your terminal window, the following lines should be outputted:
+</p>
+
+<pre><code class="bash">
+origin  git@github.com:YourGithubUsername/ideator.git (fetch)
+origin  git@github.com:YourGithubUsername/ideator.git (push)
+</code></pre>
+
+<p>
+  If nothing is outputted, then chances are you missed a step. Try following every step carefully and make sure not to make typos.
+</p>
+
+<p>
+	You’re all set! Your GitHub is set up and ready to go!
 </p>
 
 
