--- a/app/views/rspec_blog_lessons/lessons/lesson_23.html.erb
+++ b/app/views/rspec_blog_lessons/lessons/lesson_23.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-  Currently in our <code>post.rb</code>, we have to validations. Let's write some specs to make sure everything is working correctly.
+  Currently in our <code>post.rb</code>, we have two validations. Let's write some specs to make sure everything is working correctly.
 </p>
 
 <p>
