--- a/app/views/ideator_lessons/lessons/lesson_12.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_12.html.erb
@@ -132,7 +132,7 @@ Prefix Verb URI Pattern Controller#Action
     If we look back to the result of running <code>rake routes</code>, we can see that the <code>URI Pattern</code> is <code>/</code>. When a user accesses a URL that matches the <code>URI Pattern</code>, the <code>Controller#Action</code> is triggered.
   </p>
 
-  <h3>Controller#Action</h3>
+  <h3 id="controller_action">Controller#Action</h3>
 
   <p>
     The <code>Action</code> (another word for method) of the <code>Controller</code> is triggered when a user makes a request to a URL that matches the <code>URI Pattern</code>.
