--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -57,7 +57,7 @@
   <% @submission.submission_replies.order("created_at ASC").each do |reply| %>
     <% user = User.find(reply.user_id) %>
     <div class="row">
-      <div class="col-xs-2">
+      <div class="col-xs-12 col-sm-2">
         <%= image_tag user.avatar, class: 'prof_pic_forum' %>
         <div class="prof_name">
           <%= user.name %>
@@ -75,7 +75,7 @@
         </div>
       </div>
 
-      <div class="col-xs-10">
+      <div class="col-xs-12 col-sm-10">
         <small><%= display_date(reply.created_at) %></small>
         <br>
         <%= sanitize raw(reply.content) %>
